--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,17 +62,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    # - family:  CustomIcons
+    #   fonts:
+    #   - asset: build\flutter_assets\fonts\CustomIcons.ttf
+    # - family: Poppins
+    #   fonts:
+    #   - asset: build\flutter_assets\fonts\Poppins-Bold.ttf
+    #     weight: 700
+    #   - asset: build\flutter_assets\fonts\Poppins-Light.ttf
+    #     weight: 500
+    #   - asset: build\flutter_assets\fonts\Poppins-Medium.ttf   
+    #     weight: 400
+    #   - asset: build\flutter_assets\fonts\Poppins-Regular.ttf 
+    #   - asset: build\flutter_assets\fonts\Poppins-SemiBold.ttf
+    #     weight: 600    
+  #      
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
